Fix featured subverse item on front page
This is my first time working with SCSS, so I apologize if any of the logic is off. I just felt I should submit a pull request since I already figured out the plain CSS solution.

--- a/scss/partials/_linklist.scss
+++ b/scss/partials/_linklist.scss
@@ -92,6 +92,35 @@
 	}
 }
 
+// Featured Subverse submission row overrides
+.alert-featuredsub {
+	.submission {
+		.entry {
+			>p.title,
+			>p.tagline {
+
+				@if $display-thumbnails == true {
+					
+					padding-left:132px;
+					
+				} @else {
+					
+					padding-left:54px;
+					
+				}
+			}
+		}
+	}
+	
+	@if $display-thumbnails == true {
+		
+		a.title:before {
+			left:57px;
+		}
+		
+	}
+}
+
 // Targets entry only on comments page
 #firsttimevisitorwelcomemessage ~ #siteTable .entry {
 	> p.title,
